--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Kaiser - AI/ML Engineer & Islamic Tech Innovator</title>
-    <meta name="description" content="Kaiser - Computer Science Engineer specializing in AI/ML with Islamic values. Building innovative solutions that bridge technology and faith.">
-    <meta name="keywords" content="Kaiser, AI Engineer, Machine Learning, Islamic Technology, Computer Science, Jammu Kashmir">
+    <title>Kaiser Mohiuddin - Computer Science student | AI/ML Enthusiast & Islamic Tech Innovator</title>
+    <meta name="description" content="Portfolio of Kaiser Mohiuddin  - Computer Science Engineer- AI/ML Enthusiast, specializing in web developement, App development and Data science. Building innovative solutions that bridge technology and faith.Explore my projects and Skills">
+    <meta name="keywords" content="Kaiser ,Kaiser Mohiudddin, computer science Engineer ,AI ML ,AI Engineer, Machine Learning, Islamic Technology, Computer Science, Kupwara, Kashmir ,Jammu Kashmir">
     <meta name="author" content="Kaiser">
+    <meta name ="robots" content = "index, fallow">
     
     <!-- Performance optimizations -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1055,3 +1056,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
