--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kaiser Mohiuddin - Computer Science student | AI/ML Enthusiast & Islamic Tech Innovator</title>
+      <script type="application/ld+json">
+  {
+    "@context" : "https://schema.org",
+    "@type" : "WebSite",
+    "name" : "Kaiser Mohiuddin",
+    "url" : "http://kaisermohiuddin.me/"
+  }
+  </script>
     <meta name="description" content="Portfolio of Kaiser Mohiuddin  - Computer Science Engineer- AI/ML Enthusiast, specializing in web developement, App development and Data science. Building innovative solutions that bridge technology and faith.Explore my projects and Skills">
     <meta name="keywords" content="Kaiser ,Kaiser Mohiudddin, computer science Engineer ,AI ML ,AI Engineer, Machine Learning, Islamic Technology, Computer Science, Kupwara, Kashmir ,Jammu Kashmir">
     <meta name="author" content="Kaiser">
@@ -1056,4 +1064,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
