--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     "@context" : "https://schema.org",
     "@type" : "WebSite",
     "name" : "Kaiser Mohiuddin",
-    "url" : "http://kaisermohiuddin.me/"
+    "url" : "http://kaisermohiuddin.me"
   }
   </script>
     <meta name="description" content="Portfolio of Kaiser Mohiuddin  - Computer Science Engineer- AI/ML Enthusiast, specializing in web developement, App development and Data science. Building innovative solutions that bridge technology and faith.Explore my projects and Skills">
@@ -1064,5 +1064,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
