--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     "@context" : "https://schema.org",
     "@type" : "WebSite",
     "name" : "Kaiser Mohiuddin",
-    "url" : "http://kaisermohiuddin.me"
+    "url" : "https://kaiserlone.me"
   }
   </script>
     <meta name="description" content="Portfolio of Kaiser Mohiuddin  - Computer Science Engineer- AI/ML Enthusiast, specializing in web developement, App development and Data science. Building innovative solutions that bridge technology and faith.Explore my projects and Skills">
@@ -1041,15 +1041,6 @@
                         <li><a href="#consulting">Consulting</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Resources</h3>
-                    <ul>
-                        <li><a href="#blog">Blog</a></li>
-                        <li><a href="#tutorials">Tutorials</a></li>
-                        <li><a href="#open-source">Open Source</a></li>
-                        <li><a href="#resume">Resume</a></li>
-                    </ul>
-                </div>
             </div>
             <div class="footer-copyright animate-on-scroll">
                 <p>&copy; 2025 Kaiser. All rights reserved. | Built with ❤️ and guided by Islamic principles</p>
@@ -1064,6 +1055,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
