updated about me section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Kaiser Mohiuddin - Computer Science student | AI/ML Enthusiast & Islamic Tech Innovator</title>
+    <title>Kaiser Mohiuddin - Computer Science student | AI/ML Enthusiast </title>
       <script type="application/ld+json">
   {
     "@context" : "https://schema.org",
@@ -37,6 +37,7 @@
     <meta name="theme-color" content="#4285f4">
     
     <!-- Fonts and Icons - optimized loading -->
+    <link rel="icon" type="image/jpg" href="logo.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" media="print" onload="this.media='all'">
     
@@ -180,25 +181,36 @@
                 </p>
             </div>
             <div class="about-content">
-                <div class="about-text animate-on-scroll">
-                    <p>
-                        Assalamu Alaikum! I'm Kaiser Mohiud-din, a dedicated B.Tech Computer Science Engineering student 
-                        from the beautiful valleys of Kashmir, J&K. My journey in technology is deeply 
-                        rooted in the belief that knowledge is a trust from Allah (SWT) that should be used 
-                        to benefit humanity.
-                    </p>
-                    <p>
-                        Specializing in Artificial Intelligence and Machine Learning, I'm passionate about 
-                        developing solutions that address real-world challenges while maintaining ethical 
-                        standards guided by Islamic principles. My approach combines cutting-edge technology 
-                        with moral responsibility, creating innovations that serve both Deen and Duniya.
-                    </p>
-                    <p>
-                        Beyond coding, I find peace in studying the Quran, strategizing over chess boards, 
-                        and playing cricket. These activities teach patience, planning, and teamwork - 
-                        qualities that enhance my technical skills and personal growth.
-                    </p>
-                </div>
+<div class="about-text animate-on-scroll">
+    <p>
+        Assalamu Alaikum! I'm <strong>Kaiser Mohiud-din</strong>, born on 
+        <strong>5th September 2005</strong> in <strong>Kupwara, Jammu & Kashmir</strong>. 
+        I am currently pursuing my <strong>B.Tech in Computer Science Engineering</strong> 
+        from Rajouri, J&K. Growing up amidst the serene valleys of Kashmir has 
+        deeply influenced my perspective on life, faith, and technology.
+    </p>
+    <p>
+        My academic journey is centered on <strong>Artificial Intelligence and 
+        Machine Learning</strong>. I am passionate about creating AI-driven 
+        solutions that not only solve real-world problems but also uphold 
+        <strong>Islamic ethical values</strong>. For me, technology is a trust 
+        (Amanah) from Allah (SWT), and I strive to ensure that my innovations 
+        benefit humanity while balancing both <em>Deen</em> and <em>Duniya</em>.
+    </p>
+    <p>
+        Alongside my technical pursuits, I dedicate time to studying the 
+        <strong>Holy Quran</strong>, reflecting on Hadith, and learning from 
+        Islamic knowledge. These guide my approach to research, development, 
+        and daily living, ensuring my work remains purposeful and responsible.
+    </p>
+    <p>
+        Beyond academics, I enjoy playing <strong>chess</strong> and 
+        <strong>cricket</strong>, which sharpen my skills in strategy, 
+        patience, and teamwork. I am also exploring creative 
+        projects that combine logic with artistry. Each of these experiences 
+        adds depth to my growth as both a learner and an innovator.
+    </p>
+</div>
 
                 <div class="about-highlights animate-on-scroll">
                     <div class="highlight-card">
@@ -1055,6 +1067,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
