--- a/index.html
+++ b/index.html
@@ -1026,46 +1026,40 @@
             </div>
         </div>
     </section>
+<!-- Footer -->
+<footer class="footer">
+  <div class="footer-container">
+    
+    <!-- Brand / Quote -->
+    <div class="footer-brand animate-on-scroll">
+      <h2>Knowledge + Faith = True Power</h2>
+      <p>Guided by Islamic principles, driven by technology.</p>
+    </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-quote animate-on-scroll">
-                "Knowledge + Faith = True Power"
-            </div>
-            <div class="footer-links animate-on-scroll">
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#web-development">Web Development</a></li>
-                        <li><a href="#ai-ml">AI/ML Solutions</a></li>
-                        <li><a href="#mobile islamic">Mobile Apps</a></li>
-                        <li><a href="#consulting">Consulting</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-copyright animate-on-scroll">
-                <p>&copy; 2025 Kaiser. All rights reserved. | Built with ❤️ and guided by Islamic principles</p>
-                <p>
-                    <a href="#privacy">Privacy Policy</a> | 
-                    <a href="#terms">Terms of Service</a>
-                </p>
-            </div>
-        </div>
-    </footer>
+    <!-- Quick Links -->
+    <div class="footer-links animate-on-scroll">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Bottom Bar -->
+  <div class="footer-bottom">
+    <p>&copy; 2025 Kaiser. All rights reserved.</p>
+    <p>Built with ❤️ | <a href="#privacy">Privacy Policy</a> | <a href="#terms">Terms</a></p>
+  </div>
+</footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
