--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="hero-avatar animate-on-scroll">
                 <div class="avatar-container">
                     <div class="avatar-inner">
-                        <i class="fas fa-user"></i>
+                        <!-- <i class="fas fa-user"></i> -->
                     </div>
                 </div>
             </div>
@@ -1059,6 +1059,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
