--- a/index.html
+++ b/index.html
@@ -760,9 +760,9 @@
         </div>
     </div>
     <div class="project-content">
-        <h3 class="project-title">Streakly - Habit & Streak Tracker</h3>
+        <h3 class="project-title">SiratSync - Habit & Streak Tracker with Quran , Hadiths and many More.</h3>
         <p class="project-description">
-            Streakly is a simple and powerful habit tracking mobile application that helps users build consistency. 
+            SiratSync is a simple and powerful habit tracking mobile application that helps users build consistency. 
             It allows daily habit check-ins, automatically increases streaks when completed, and resets them when skipped. 
             Designed to work offline with local storage, it ensures users can track their progress anytime. 
             Features include streak visualization, progress history, and customizable habit reminders, all in a clean and minimal UI.
@@ -1059,6 +1059,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
