--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Intelligent License Plate Recognition System</h3>
+                        <h3 class="project-title">License Plate Recognition System</h3>
                         <p class="project-description">
                             Computer vision system that detects, extracts, and recognizes license plates in real-time. 
                             Features include blacklist checking, automatic number plate recognition (ANPR), and integration with security databases for law enforcement applications.
@@ -694,10 +694,10 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">ISLAM99 - Comprehensive Islamic App</h3>
+                        <h3 class="project-title">ISLAM99 - Islamic App(basic)</h3>
                         <p class="project-description">
-                            Complete Islamic mobile application featuring Quran recitation with multiple reciters, authentic Hadith collections, 
-                            prayer time calculations, Qibla direction, Islamic calendar, and daily dhikr reminders. Designed with beautiful Arabic calligraphy and intuitive UI.
+                            Complete Islamic mobile application featuring Quran, authentic Hadith collections, 
+                            prayer time calculations, Qibla direction, Islamic calendar, and Many more. Designed with beautiful Arabic calligraphy and intuitive UI.
                         </p>
 <div class="project-tech">
     <span class="tech-tag">Flutter</span>
@@ -710,13 +710,13 @@
 </div>
 
                         <div class="project-actions">
-                            <a href="https://github.com/Lonekaiser04" class="project-link project-link-primary">
+                            <a href="https://github.com/Lonekaiser04/Islam99app" class="project-link project-link-primary">
                                 <i class="fab fa-github"></i>
-                                View Code(soon)
+                                View Code
                             </a>
-                            <a href="#" class="project-link project-link-secondary">
+                            <a href="lonekaiser04.github.io/Islam99" class="project-link project-link-secondary">
                                 <i class="fab fa-google-play"></i>
-                                Play Store(soon)
+                                Download APK
                             </a>
                         </div>
                     </div>
@@ -742,13 +742,13 @@
         <span class="tech-tag">JavaScript</span>
     </div>
     <div class="project-actions">
-        <a href="https://github.com/Lonekaiser04/Islam99" class="project-link project-link-primary">
+        <a href="https://github.com/Lonekaiser04/Deenify" class="project-link project-link-primary">
             <i class="fab fa-github"></i>
             View Code
         </a>
-        <a href="#" class="project-link project-link-secondary">
+        <a href="https://kaisermohiuddin.me/Deenify/" class="project-link project-link-secondary">
             <i class="fas fa-external-link-alt"></i>
-            Live Demo(soon)
+            Go to Website
         </a>
     </div>
 </div>
@@ -762,7 +762,7 @@
     <div class="project-content">
         <h3 class="project-title">SiratSync - Habit & Streak Tracker with Quran , Hadiths and many More.</h3>
         <p class="project-description">
-            SiratSync is a simple and powerful habit tracking mobile application that helps users build consistency. 
+            SiratSync is a advanced and powerful Islamic application with all features such as Quran, hadith, Prayer times, Dua collections,Islamic calender , Qibla direction, community-based ranking, Create Posts and habit tracking system that helps users build consistency. 
             It allows daily habit check-ins, automatically increases streaks when completed, and resets them when skipped. 
             Designed to work offline with local storage, it ensures users can track their progress anytime. 
             Features include streak visualization, progress history, and customizable habit reminders, all in a clean and minimal UI.
@@ -785,6 +785,10 @@
             <a href="#" class="project-link project-link-secondary">
                 <i class="fab fa-google-play"></i>
                 Play Store(soon)
+            </a>
+             <a href="https://kaisermohiuddin.me/SiratSync/" class="project-link project-link-secondary">
+                <i class="fab fa-apk-download"></i>
+                Download APK
             </a>
         </div>
     </div>
@@ -809,10 +813,6 @@
                             <a href="https://github.com/Lonekaiser04/project-practices" class="project-link project-link-primary">
                                 <i class="fab fa-github"></i>
                                 View Code
-                            </a>
-                            <a href="#" class="project-link project-link-secondary">
-                                <i class="fas fa-play"></i>
-                                Play Now
                             </a>
                         </div>
                     </div>
@@ -876,10 +876,10 @@
                     <div class="achievement-icon">
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <h3 class="achievement-title">Data Science Professional Certificate</h3>
+                    <h3 class="achievement-title">AI/ML Certificate</h3>
                     <p class="achievement-description">
-                        Comprehensive data analytics and science certification covering statistical analysis, 
-                        data visualization, machine learning, and big data processing using Python and R.
+                        Comprehensive AI/ML certification covering various machine learning and AI models, 
+                        data visualization using Python.
                     </p>
                 </div>
             </div>
@@ -1051,7 +1051,7 @@
 
   <!-- Bottom Bar -->
   <div class="footer-bottom">
-    <p>&copy; 2025 Kaiser. All rights reserved.</p>
+    <p>&copy; 2025 Kaiser Mohiuddin. All rights reserved.</p>
     <p>Built with ❤️ | <a href="#privacy">Privacy Policy</a> | <a href="#terms">Terms</a></p>
   </div>
 </footer>
@@ -1059,6 +1059,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
