--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <div class="hero-stats animate-on-scroll">
                 <div class="stat-item">
-                    <div class="stat-number" data-count="8">0</div>
+                    <div class="stat-number" data-count="8+">0</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-item">
@@ -162,7 +162,7 @@
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-count="7">0</div>
+                    <div class="stat-number" data-count="9+">0</div>
                     <div class="stat-label">GitHub Repositories</div>
                 </div>
             </div>
@@ -782,10 +782,6 @@
                 <i class="fab fa-github"></i>
                 View Code(soon)
             </a>
-            <a href="#" class="project-link project-link-secondary">
-                <i class="fab fa-google-play"></i>
-                Play Store(soon)
-            </a>
              <a href="https://kaisermohiuddin.me/SiratSync/" class="project-link project-link-secondary">
                 <i class="fab fa-apk-download"></i>
                 Download APK
@@ -1059,6 +1055,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
