--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-count="9+">0</div>
+                    <div class="stat-number" data-count="11+">0</div>
                     <div class="stat-label">GitHub Repositories</div>
                 </div>
             </div>
@@ -714,7 +714,7 @@
                                 <i class="fab fa-github"></i>
                                 View Code
                             </a>
-                            <a href="lonekaiser04.github.io/Islam99" class="project-link project-link-secondary">
+                            <a href="https://kaisermohiuddin.me/Islam99/" class="project-link project-link-secondary">
                                 <i class="fab fa-google-play"></i>
                                 Download APK
                             </a>
@@ -748,7 +748,7 @@
         </a>
         <a href="https://kaisermohiuddin.me/Deenify/" class="project-link project-link-secondary">
             <i class="fas fa-external-link-alt"></i>
-            Go to Website
+            Visit Website
         </a>
     </div>
 </div>
@@ -1055,6 +1055,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
