--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <div class="hero-stats animate-on-scroll">
                 <div class="stat-item">
-                    <div class="stat-number" data-count="8+">0</div>
+                    <div class="stat-number" data-count="8">8+</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-item">
@@ -162,7 +162,7 @@
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-count="11+">0</div>
+                    <div class="stat-number" data-count="11">11+</div>
                     <div class="stat-label">GitHub Repositories</div>
                 </div>
             </div>
@@ -1055,6 +1055,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
