--- a/index.html
+++ b/index.html
@@ -753,6 +753,93 @@
     </div>
 </div>
                 </div>
+                <div class="project-card animate-on-scroll" data-category="web">
+    <div class="project-image">
+        <div class="project-icon">
+            <i class="fas fa-globe"></i>
+        </div>
+    </div>
+    <div class="project-content">
+        <h3 class="project-title">SiratSync Website</h3>
+        <p class="project-description">
+            A modern landing website for <strong>SiratSync</strong> — an Islamic productivity app that helps users stay on the straight path with reminders for Salah, Quran reading, and daily good deeds. 
+            The site includes download links, app previews, and a clean UI designed for both desktop and mobile users.
+        </p>
+        <div class="project-tech">
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">CSS3</span>
+            <span class="tech-tag">JavaScript</span>
+        </div>
+        <div class="project-actions">
+            <a href="https://github.com/Lonekaiser04/SiratSync" class="project-link project-link-primary">
+                <i class="fab fa-github"></i>
+                View Code
+            </a>
+            <a href="https://kaisermohiuddin.me/SiratSync/" class="project-link project-link-secondary">
+                <i class="fas fa-external-link-alt"></i>
+                Visit Website
+            </a>
+        </div>
+    </div>
+</div>
+<div class="project-card animate-on-scroll" data-category="web">
+    <div class="project-image">
+        <div class="project-icon">
+            <i class="fas fa-globe"></i>
+        </div>
+    </div>
+    <div class="project-content">
+        <h3 class="project-title">Islam99 Website</h3>
+        <p class="project-description">
+            The official download and information website for the <strong>Islam99 App</strong>, a comprehensive Islamic application offering Quran translation, Hadith, prayer timings, and daily reminders.
+            The website provides a direct download section, feature highlights, and a minimal interface inspired by Islamic aesthetics.
+        </p>
+        <div class="project-tech">
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">CSS3</span>
+            <span class="tech-tag">JavaScript</span>
+        </div>
+        <div class="project-actions">
+            <a href="https://github.com/Lonekaiser04/Islam99" class="project-link project-link-primary">
+                <i class="fab fa-github"></i>
+                View Code
+            </a>
+            <a href="https://kaisermohiuddin.me/Islam99/" class="project-link project-link-secondary">
+                <i class="fas fa-external-link-alt"></i>
+                Visit Website
+            </a>
+        </div>
+    </div>
+</div>
+<div class="project-card animate-on-scroll" data-category="web">
+    <div class="project-image">
+        <div class="project-icon">
+            <i class="fas fa-user"></i>
+        </div>
+    </div>
+    <div class="project-content">
+        <h3 class="project-title">Personal Portfolio</h3>
+        <p class="project-description">
+            My personal portfolio website built to showcase my work, Islamic projects, and engineering journey. 
+            It includes sections like About, Skills, Projects, and Contact — designed with smooth animations, responsive UI, and elegant dark mode support.
+        </p>
+        <div class="project-tech">
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">CSS3</span>
+            <span class="tech-tag">JavaScript</span>
+        </div>
+        <div class="project-actions">
+            <a href="https://github.com/Lonekaiser04/lonekaiser04.github.io" class="project-link project-link-primary">
+                <i class="fab fa-github"></i>
+                View Code
+            </a>
+            <a href="https://kaisermohiuddin.me/" class="project-link project-link-secondary">
+                <i class="fas fa-external-link-alt"></i>
+                Visit Website
+            </a>
+        </div>
+    </div>
+</div>
             <div class="project-card animate-on-scroll" data-category="mobile islamic">
     <div class="project-image">
         <div class="project-icon">
@@ -1055,6 +1142,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
