--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
         </div>
     </div>
     <div class="project-content">
-        <h3 class="project-title">Personal Portfolio</h3>
+        <h3 class="project-title">Personal Portfolio(Current Website)</h3>
         <p class="project-description">
             My personal portfolio website built to showcase my work, Islamic projects, and engineering journey. 
             It includes sections like About, Skills, Projects, and Contact — designed with smooth animations, responsive UI, and elegant dark mode support.
@@ -1142,6 +1142,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
