--- a/index.html
+++ b/index.html
@@ -988,6 +988,7 @@
                         <div class="contact-details">
                             <h3>Email Address</h3>
                             <p>Lonekaiser04@gmail.com</p>
+                            <p>Kaiser.cse26-2023@bgsbu.ac.in</p>
                         </div>
                     </div>
 
@@ -999,17 +1000,6 @@
                             <h3>Location</h3>
                             <p>Kupwara, Jammu & Kashmir</p>
                             <p>Available for remote collaboration worldwide</p>
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-phone"></i>
-                        </div>
-                        <div class="contact-details">
-                            <h3>Phone</h3>
-                            <p>+91 6006742403</p>
-                            <p>Available: 9 AM - 6 PM IST</p>
                         </div>
                     </div>
 
@@ -1135,13 +1125,14 @@
   <!-- Bottom Bar -->
   <div class="footer-bottom">
     <p>&copy; 2025 Kaiser Mohiuddin. All rights reserved.</p>
-    <p>Built with ❤️ | <a href="#privacy">Privacy Policy</a> | <a href="#terms">Terms</a></p>
+    <p>Built with ❤️</p>
   </div>
 </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
