--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
             </p>
 
             <div class="hero-actions animate-on-scroll">
-                <a href="#resume" class="btn btn-primary">
+                <!-- <a href="#resume" class="btn btn-primary">
                     <i class="fas fa-download"></i>
                     Download Resume
-                </a>
+                </a> -->
                 <a href="#projects" class="btn btn-secondary">
                     <i class="fas fa-code"></i>
                     View Projects
@@ -1132,6 +1132,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
