--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-count="11">11+</div>
+                    <div class="stat-number" data-count="12">11+</div>
                     <div class="stat-label">GitHub Repositories</div>
                 </div>
             </div>
@@ -325,7 +325,7 @@
                         <span class="subject-tag">Physics</span>
                         <span class="subject-tag">Chemistry</span>
                         <span class="subject-tag">Mathematics</span>
-                        <span class="subject-tag">Computer Science</span>
+                        <span class="subject-tag">Information practice</span>
                         <span class="subject-tag">English</span>
                     </div>
                 </div>
@@ -385,6 +385,12 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-name">SQL</div>
+                            <div class="skill-level">
+                                <div class="skill-progress" data-progress="88"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-name">PHP</div>
                             <div class="skill-level">
                                 <div class="skill-progress" data-progress="88"></div>
                             </div>
@@ -463,12 +469,6 @@
                             <div class="skill-name">Firebase</div>
                             <div class="skill-level">
                                 <div class="skill-progress" data-progress="85"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <div class="skill-name">MongoDB</div>
-                            <div class="skill-level">
-                                <div class="skill-progress" data-progress="70"></div>
                             </div>
                         </div>
                         <div class="skill-item">
@@ -721,6 +721,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="project-card animate-on-scroll" data-category="web">
+    <div class="project-image">
+        <div class="project-icon">
+            <i class="fas fa-book"></i>
+        </div>
+    </div>
+
+    <div class="project-content">
+        <h3 class="project-title">Library Management System</h3>
+
+        <p class="project-description">
+            A fully functional <strong>web-based Library Management System</strong> with 
+            <strong>Admin & Student login</strong>, secure authentication, auto-generated temporary passwords, 
+            first-time password reset, and separate dashboards. 
+            Features include complete <strong>Book Management</strong>, <strong>Student Management</strong>, 
+            <strong>Issue/Return tracking</strong>, <strong>fine calculation</strong>, and a 
+            responsive UI built for seamless usage across devices.
+        </p>
+
+        <div class="project-tech">
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">CSS3</span>
+            <span class="tech-tag">JavaScript</span>
+            <span class="tech-tag">PHP (PDO)</span>
+            <span class="tech-tag">MySQL</span>
+        </div>
+
+        <div class="project-actions">
+            <a href="https://github.com/lonekaiser04/LibraryManagementSystem" 
+               class="project-link project-link-primary">
+                <i class="fab fa-github"></i>
+                View Code
+            </a>
+
+            <a href="https://librarybykaiser.ct.ws/" 
+               class="project-link project-link-secondary">
+                <i class="fas fa-external-link-alt"></i>
+                Visit website
+            </a>
+        </div>
+    </div>
+</div>
 
                 <div class="project-card animate-on-scroll" data-category="web">
                     <div class="project-image">
@@ -1132,6 +1174,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
