--- a/index.html
+++ b/index.html
@@ -749,13 +749,13 @@
         </div>
 
         <div class="project-actions">
-            <a href="https://github.com/lonekaiser04/LibraryManagementSystem" 
+            <a href="https://github.com/lonekaiser04/Library-Management-System" 
                class="project-link project-link-primary">
                 <i class="fab fa-github"></i>
                 View Code
             </a>
 
-            <a href="https://librarybykaiser.ct.ws/" 
+            <a href="https://librarybykaiser.ct.ws" 
                class="project-link project-link-secondary">
                 <i class="fas fa-external-link-alt"></i>
                 Visit website
@@ -1174,6 +1174,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
