--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
         <div class="hero-content">
             <div class="hero-avatar animate-on-scroll">
                 <div class="avatar-container">
-                    <div class="avatar-inner">
-                        <!-- <i class="fas fa-user"></i> -->
-                    </div>
+                 <div class="avatar-inner">
+    <img src="Kaiser.jpg" alt="Kaiser Mohiuddin">
+</div>
+
                 </div>
             </div>
 
@@ -1174,6 +1175,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
