--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="hero-avatar animate-on-scroll">
                 <div class="avatar-container">
                  <div class="avatar-inner">
-    <img src="Kaiser.jpg" alt="Kaiser Mohiuddin">
+    <img src="Kaiser1.jpg" alt="Kaiser Mohiuddin">
 </div>
 
                 </div>
@@ -1175,6 +1175,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
