--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                             </a>
                             <a href="https://kaisermohiuddin.me/Islam99/" class="project-link project-link-secondary">
                                 <i class="fab fa-google-play"></i>
-                                Download APK
+                                Download 
                             </a>
                         </div>
                     </div>
@@ -914,7 +914,7 @@
             </a>
              <a href="https://kaisermohiuddin.me/SiratSync/" class="project-link project-link-secondary">
                 <i class="fab fa-apk-download"></i>
-                Download APK
+                Download
             </a>
         </div>
     </div>
@@ -1175,6 +1175,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
