--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
             <div class="hero-stats animate-on-scroll">
                 <div class="stat-item">
-                    <div class="stat-number" data-count="12">10+</div>
+                    <div class="stat-number" data-count="12">0</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-item">
@@ -163,7 +163,7 @@
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number" data-count="12">11+</div>
+                    <div class="stat-number" data-count="14">0</div>
                     <div class="stat-label">GitHub Repositories</div>
                 </div>
             </div>
@@ -1175,6 +1175,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
