--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta name="description" content="Personal portfolio of Kaiser Mohiuddin, Computer Science Engineer and AI/ML enthusiast. Creator of SiratSync, an Islamic habit and streak tracking app. Explore projects in web, app development, data science, and ethical technology.">
 <meta name="keywords" content="Kaiser Mohiuddin, Computer Science Engineer, AI ML Engineer, Machine Learning, Islamic Technology, SiratSync, Web Development, App Development, Data Science,Kupwara, Kashmir, Jammu and Kashmir">
     <meta name ="robots" content = "index, follow">
+    <meta name="google-site-verification" content="OFUiGaq2v2zHvpdLhCBeXvhYYDaG_XrgdD0XxoEQ_Ek" />
     
     <!-- Performance optimizations -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1297,6 +1298,7 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
