--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <i class="fas fa-envelope"></i>
         Get In Touch
     </a>
-    <a href="Kaiser_Resume.pdf" class="btn btn-primary">
+    <a href="Kaiser_resume.pdf" class="btn btn-primary">
                     <i class="fas fa-download"></i>
                     Download Resume
                 </a>
@@ -1298,6 +1298,7 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
