--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
     <meta name="theme-color" content="#4285f4">
     
     <!-- Fonts and Icons - optimized loading -->
-    <link rel="icon" type="image/jpg" href="logo.jpg">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" media="print" onload="this.media='all'">
     
@@ -1298,6 +1303,7 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
