--- a/index.html
+++ b/index.html
@@ -744,39 +744,6 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
             </div>
 
             <div class="projects-grid">
-                <div class="project-card animate-on-scroll" data-category="ai-ml">
-                    <div class="project-image">
-                        <div class="project-icon">
-                            <i class="fas fa-brain"></i>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">AI-Powered Mental Health Classifier</h3>
-                        <p class="project-description">
-                            Advanced machine learning system that analyzes behavioral patterns and textual data to predict mental health conditions. 
-                            Uses NLP techniques and deep learning models to provide early detection and support recommendations while maintaining privacy and ethical standards.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">Keras</span>
-                            <span class="tech-tag">NLTK</span>
-                            <span class="tech-tag">Pandas</span>
-                            <span class="tech-tag">Scikit-learn</span>
-                            <span class="tech-tag">Flask</span>
-                        </div>
-                        <div class="project-actions">
-                            <a href="https://github.com/Lonekaiser04" class="project-link project-link-primary">
-                                <i class="fab fa-github"></i>
-                                View Code(soon)
-                            </a>
-                            <a href="#" class="project-link project-link-secondary">
-                                <i class="fas fa-external-link-alt"></i>
-                                Live Demo
-                            </a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="project-card animate-on-scroll" data-category="ai-ml">
                     <div class="project-image">
@@ -846,7 +813,7 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
             <a href="https://kaisermohiuddin.me/SiratSync/" 
                class="project-link project-link-secondary">
                 <i class="fas fa-download"></i>
-                Download App
+                Visit Website
             </a>
         </div>
     </div>
@@ -875,7 +842,7 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
 </div>
 
                         <div class="project-actions">
-                            <a href="https://github.com/Lonekaiser04/Islam99app" class="project-link project-link-primary">
+                            <a href="https://github.com/Lonekaiser04/Islam99-app" class="project-link project-link-primary">
                                 <i class="fab fa-github"></i>
                                 View Code
                             </a>
@@ -1047,6 +1014,39 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
         </div>
     </div>
 </div>
+                               <div class="project-card animate-on-scroll" data-category="ai-ml">
+                    <div class="project-image">
+                        <div class="project-icon">
+                            <i class="fas fa-brain"></i>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">AI-Powered Mental Health Classifier</h3>
+                        <p class="project-description">
+                            Advanced machine learning system that analyzes behavioral patterns and textual data to predict mental health conditions. 
+                            Uses NLP techniques and deep learning models to provide early detection and support recommendations while maintaining privacy and ethical standards.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">TensorFlow</span>
+                            <span class="tech-tag">Keras</span>
+                            <span class="tech-tag">NLTK</span>
+                            <span class="tech-tag">Pandas</span>
+                            <span class="tech-tag">Scikit-learn</span>
+                            <span class="tech-tag">Flask</span>
+                        </div>
+                        <div class="project-actions">
+                            <a href="https://github.com/Lonekaiser04" class="project-link project-link-primary">
+                                <i class="fab fa-github"></i>
+                                View Code(soon)
+                            </a>
+                            <a href="#" class="project-link project-link-secondary">
+                                <i class="fas fa-external-link-alt"></i>
+                                Live Demo
+                            </a>
+                        </div>
+                    </div>
+                </div>
 <div class="project-card animate-on-scroll" data-category="Python">
                     <div class="project-image">
                         <div class="project-icon">
@@ -1303,6 +1303,7 @@ Includes Quran, Hadith, prayer times, duas, Qibla direction, tasbih, 99 Names of
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
